# ConsoleRPG

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
header/: Character.hpp  ExperienceManagement.hpp  Game.hpp  HPManagement.hpp  LevelManagement.hpp  ManaManagement.hpp
src/: Character.cpp  ExperienceManagement.cpp  Game.cpp  HPManagement.cpp  LevelManagement.cpp  ManaManagement.cpp  main.cpp
tests_gtest/: CharacterTests.cpp  ExperienceManagementTests.cpp  GameTests.cpp  HPManagementTests.cpp  LevelManagementTests.cpp  ManaManagementTests.cpp
